pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: short-app
  labels:
    components: frontend
spec:
  containers:
    - name: conv-app
      image: antonlarichev/conv-app
      ports: 
        - containerPort: 80
      resources: 
        limits:
          memory: "128Mi"
          cpu: "100m"
