postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: postgress-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      components: db_postgres
  template: # берем прям  из файла с конфигурацией пода
    metadata:
      name: postgress
      labels: 
        components: db_postgres
    spec:
      containers:
        - name: postgress
          image: postgres:16
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
