rabbit_mq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: db_rabbit
  template: # берем прям  из файла с конфигурацией пода
    metadata:
      name: rabbitmq
      labels:
        components: db_rabbit
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13.7-management
          ports:
            - containerPort: 15672 
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: rabbit-data
              mountPath:  /var/lib/rabbitmq
              subPath: rabbit # в какую папку в volume это складывать
      volumes:
        - name: rabbit-data
          persistentVolumeClaim:
            claimName: rabbit-pvc
