service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short-app-service
spec: 
  type: NodePort
  ports:
    - port: 3000
      targerPort: 80
      nodePort: 31200
  selector:
    components: frontend
